syntax = "proto3";


import "google/protobuf/any.proto";
import "grpcCommon/msg_error.proto"; // 错误码

package collect;
option java_multiple_files = true;
option java_package = "com.wanfang.collect";
option objc_class_prefix = "WFPR";

// 收藏文献
message CollectRequest {
    string user_id = 1;
    string doc_id = 2;
    string doc_type = 3;
    string classify_id = 4;
}
message CollectResponse {
    bool collect_success = 1;
    grpcCommon.GrpcError error = 2;
}

// 获取我的收藏-(文献 期刊...)
message MyCollectRequest {
    string user_id = 1; // 用户id
    int32 page_number = 2;
    int32 page_size = 3;
}
message MyCollectResponse {
    repeated google.protobuf.Any results = 1;
    bool has_more = 2;
    int32 total_count = 3; // 命中数
    grpcCommon.GrpcError error = 4;
}

message CollectBody {
    string docu_id = 1;
    string docu_title = 2;
    string add_time = 3;
    int32 star_level = 4;
    string docu_type = 5;
}

enum MyCollectDetailType {
    DEGREE_TYPE = 0; // 学位详情
    CONFERENCE_TYPE = 1; // 会议详情
    PERIO_TYPE = 2; // 
}
// 收藏列表详情页
message MyCollectDetailRequest {
    string artical_id = 1; // docu_id
    string artical_type = 2;
}
message MyCollectDetailResponse {
    grpcCommon.GrpcError error = 1;

    string title = 2; // 标题
    string summary = 3; // 摘要
    string keywords = 4; // 关键词
    string authors_name = 5; // 作者

    string cite_num = 6; // 被引数
    string download_num = 7; // 下载数
    string fulltext_reading_num = 8; // 阅读数
    string thirdparty_links_num = 9; // 第三方链接次数 (可能不存在此字段)

    google.protobuf.Any collect_detail = 10;

    MyCollectDetailType detail_type = 11;
    
    // 根据type去unpack相应的message

    // MyCollectConfMessage conf_message = 11; // 会议信息   CONFERENCE_TYPE
    // MyCollectPerioMessage perio_message = 12; // perio信息 PERIO_TYPE
    // MyCollectDegreeMessage degree_message = 13; // 学位信息 DEGREE_TYPE

    repeated MyCollectSimilarPaperMessage similar_papers = 12;

    // 开始阅读相关
    string resource_id = 13; // article_id
    string resource_db = 14; // source_db
    string language = 15; // language
    string class_type = 16; // resourceType
}
// 收藏详情/文献详情 会议详情信息
message MyCollectConfMessage {
    string conf_name = 1; // 会议名称
    string conf_type = 2; // 会议类型
    string conf_year = 3; // 会议年份
    string publish_place = 4; // 会议地点
    string hostunit_name = 5; // 主办单位 '%'分隔
}
// perio信息
message MyCollectPerioMessage {
    string authors_unit = 1; // 作者单位
    string perio_title = 2; // 刊名
    string perio_title_en = 3; // 外文名
    string publish_year = 4; // 出版年
    string issue_num = 5; // 第几期(卷)
    string abst_webdate = 6; // 在线出版日期
}
// degree学位信息
message MyCollectDegreeMessage {
    string deunit_name = 1; // 学位授予单位
    string degree_level = 2; // 授予学位
    string major_name = 3; // 学科专业
    string tutor_name = 4; // 导师姓名
    string publish_year = 5; // 学位年度
}

message MyCollectSimilarPaperMessage {
	string artical_id = 1;
	string artical_type = 2;
	string title = 3;
}